# trout

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: static.yml
docs/: Makefile  package-lock.json
docs/public/: index.html  style.css
docs/solver_wasm/: Cargo.toml  Makefile
docs/solver_wasm/src/: lib.rs
docs/src/: index.ts  solver.ts  worker.ts
pages/: index.41587fae.css  index.41587fae.css.map  index.57eba216.js  index.57eba216.js.map  index.793b1bdb.js  index.793b1bdb.js.map  index.894da6d2.js  index.894da6d2.js.map  index.8ccc26c3.js  index.8ccc26c3.js.map  index.8e09b080.css  index.8e09b080.css.map  index.90fe7d85.css  index.90fe7d85.css.map  index.98179adc.js  index.98179adc.js.map  index.99f1eba9.js  index.99f1eba9.js.map  index.d327098a.js  index.d327098a.js.map  index.d6157a2c.css  index.d6157a2c.css.map  index.f525077a.js  index.f525077a.js.map  index.fe301045.css  index.fe301045.css.map  index.html  solver_wasm_bg.152bd084.wasm  solver_wasm_bg.18941884.wasm  solver_wasm_bg.ba564b83.wasm  solver_wasm_bg.d17bae17.wasm  solver_wasm_bg.fd6cbdce.wasm  worker.24bca051.js  worker.24bca051.js.map  worker.624199bf.js  worker.624199bf.js.map  worker.7048786b.js  worker.7048786b.js.map  worker.a45f3902.js  worker.a45f3902.js.map  (+2 more)
sj_tables/: advanced_table.txt  beginner_table.txt  intermediate_table.txt
src/: lib.rs  main.rs  solver.rs
web/: Makefile  package-lock.json  package.json
web/public/: index.html  style.css
web/solver_wasm/: Makefile
web/solver_wasm/src/: lib.rs
web/src/: index.ts  solver.ts  theme.ts  worker.ts
(+1 files in other folders)
