[package]
name = "trout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
arboard = { version = "3.2.0", optional = true }
dhat = { version = "0.3.2", optional = true }

[features]
default = ["clipboard"]
clipboard = ["arboard"]
heap_profiling = ["dhat"]

[profile.release]
debug = true
